--- a/menu.css
+++ b/menu.css
@@ -110,37 +110,62 @@ nav li:first-child {
 
 
 /* home starts */
-.home {
+.hero {
     background: url(images/1.jpg) no-repeat;
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
     align-items: center;
-    min-height: 75vh;
+    min-height: 85vh;
     justify-content: center;
 }
 
 /* Styling form container */
-.home {
+.hero {
     text-align: center;
     padding: 50px 20px;
 }
+.container {
+    display: flex;
+    justify-content: space-between;
+}
+
+.hero-content {
+    flex: 1;
+}
+
+.hero-banner {
+    flex: 1;
+    display: flex;
+    justify-content: flex-end;
+}
+
+.hero-banner img {
+    max-width: 100%;
+    height: auto;
+}
+
+.text-content {
+    max-width: 400px; /* Adjust as needed */
+    padding: 20px;
+}
 
 /* Styling form */
-form {
+/* form {
     background-color: #949191;
     opacity: 0.8;
     border-radius: 10px;
-    padding: 20px;
+    padding: 1%;
+    margin-top: 90px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
 h3 {
     margin-bottom: 70px;
-}
+} */
 
 /* Styling buttons */
-.button-container {
+/* .button-container {
     margin-bottom: 20px;
 }
 
@@ -154,10 +179,10 @@ h3 {
     border: none;
     border-radius: 5px;
     cursor: pointer;
-}
+} */
 
 /* Styling input boxes */
-.inputBox {
+/* .inputBox {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
     grid-gap: 10px;
@@ -170,10 +195,10 @@ select {
     padding: 10px;
     border: 1px solid #ccc;
     border-radius: 5px;
-}
+} */
 
 /* Styling submit button */
-input[type="submit"] {
+/* input[type="submit"] {
     width: 50%;
     padding: 10px;
     border: none;
@@ -186,15 +211,18 @@ input[type="submit"] {
 
 input[type="submit"]:hover {
     background-color: #595b5d;
-}
+} */
 /* home ends */
 
 
 
 
 /* services starts */
-.services .h1{
-    align-items: center;
+.services h1{
+    text-align: center;
+    padding-top: 15px;
+    padding-bottom: 30px;
+    font-size: xxx-large;
 }
 
 .services .box-container{
